--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^7.0.0"
   }
 }
